@@ -1,3 +1,8 @@
+2002-07-23  Alan Modra  <amodra@bigpond.net.au>
+
+	* elflink.h (elf_link_input_bfd): Don't change internal symbols
+	when outputting relocs.
+
 2002-07-20  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* elf64-alpha.c (elf64_alpha_size_dynamic_sections): Only insert
